rust_ex0_grade
-----------------------
 ex0.rs
-----------------------
	fahrenheit_to_celsius_converter --- 5/5
	dice_roll ------------------------- 0/5
		did not compile
13  |     return rand::thread_rng().gen_range(1, sides);
    |                               --------- ^ the trait `SampleRange<_>` is not implemented for `{integer}`
    |                               |
    |                               required by a bound introduced by this call
    = help: the following other types implement trait `SampleRange<T>`:
              RangeInclusive<T>
              std::ops::Range<T>
note: required by a bound in `gen_range`
   --> /home/poo/.cargo/registry/src/github.com-1ecc6299db9ec823/rand-0.8.5/src/rng.rs:132:12
    |
132 |         R: SampleRange<T>
    |            ^^^^^^^^^^^^^^ required by this bound in `gen_range`

error[E0061]: this function takes 1 argument but 2 arguments were supplied
   --> src/ex0.rs:13:31
    |
13  |     return rand::thread_rng().gen_range(1, sides);
    |                               ^^^^^^^^^    ----- argument of type `u8` unexpected
    |
note: associated function defined here
   --> /home/poo/.cargo/registry/src/github.com-1ecc6299db9ec823/rand-0.8.5/src/rng.rs:129:8
    |
129 |     fn gen_range<T, R>(&mut self, range: R) -> T
    |        ^^^^^^^^^
help: remove the extra argument
    |
13  |     return rand::thread_rng().gen_range(1);
		
	multi_string ---------------------- 5/5
	add_vowels ------------------------ 5/5
	echo_split ------------------------ 5/5
	input_number ---------------------- 7/7
	draw_card ------------------------- 0/7
	input_coord ----------------------- 7/7
	madlib ---------------------------- 10/10
	ghost_name_generator -------------- 10/10
	print_board ----------------------- 0/10
	ship_captain_crew ----------------- 0/30
	tic_tac_toe ----------------------- 0/30

-----------------------
total ----------- 50/40  

